fixing z-index superposition

--- a/src/components/calendar/calendar.module.scss
+++ b/src/components/calendar/calendar.module.scss
@@ -9,7 +9,7 @@ $empty-cell-color: #eeeaea;
 
 .container {
   display: flex;
-  overflow: auto;
+
   margin: auto;
   justify-content: center;
   align-items: center;
